--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 <div class="wrapper">
 	<div class="row">
 		<div class="col-1-2">
-			<div></div>
+			<div>
+				<firgure>
+					<img src="img/subaru_gallery.jpg" alt="">
+				</firgure> 
+			</div>
 		</div>
 		<div class="col-1-2">
 			<div></div>
@@ -124,6 +128,319 @@
 			<div></div>
 		</div>
 	</div>
+	
+	<div class="row">
+		<div class="col-1-7">
+			<div></div>
+		</div>
+		<div class="col-1-7">
+			<div></div>
+		</div>
+		<div class="col-1-7">
+			<div></div>
+		</div>
+		<div class="col-1-7">
+			<div></div>
+		</div>
+		<div class="col-1-7">
+			<div></div>
+		</div>
+		<div class="col-1-7">
+			<div></div>
+		</div>
+		<div class="col-1-7">
+			<div></div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-3-7">
+			<div></div>
+		</div>
+		<div class="col-4-7">
+			<div></div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-1-8">
+			<div></div>
+		</div>
+		<div class="col-1-8">
+			<div></div>
+		</div>
+		<div class="col-1-8">
+			<div></div>
+		</div>
+		<div class="col-1-8">
+			<div></div>
+		</div>
+		<div class="col-1-8">
+			<div></div>
+		</div> 
+		<div class="col-1-8">
+			<div></div>
+		</div>
+		<div class="col-1-8">
+			<div></div>
+		</div>
+		<div class="col-1-8">
+			<div></div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-6-8">
+			<div></div>
+		</div>
+		<div class="col-2-8">
+			<div></div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-1-9">
+			<div></div>
+		</div>
+		<div class="col-1-9">
+			<div></div>
+		</div>
+		<div class="col-1-9">
+			<div></div>
+		</div>
+		<div class="col-1-9">
+			<div></div>
+		</div>
+		<div class="col-1-9">
+			<div></div>
+		</div>
+		<div class="col-1-9">
+			<div></div>
+		</div>
+		<div class="col-1-9">
+			<div></div>
+		</div>
+		<div class="col-1-9">
+			<div></div>
+		</div>
+		<div class="col-1-9">
+			<div></div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-3-9">
+			<div></div>
+		</div>
+		<div class="col-3-9">
+			<div></div>
+		</div>
+		<div class="col-3-9">
+			<div></div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-1-10">
+			<div></div>
+		</div>
+		<div class="col-1-10">
+			<div></div>
+		</div>
+		<div class="col-1-10">
+			<div></div>
+		</div>
+		<div class="col-1-10">
+			<div></div>
+		</div>
+		<div class="col-1-10">
+			<div></div>
+		</div>
+		<div class="col-1-10">
+			<div></div>
+		</div>
+		<div class="col-1-10">
+			<div></div>
+		</div>
+		<div class="col-1-10">
+			<div></div>
+		</div>
+		<div class="col-1-10">
+			<div></div>
+		</div>
+		<div class="col-1-10">
+			<div></div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-2-10">
+			<div></div>
+		</div>
+		<div class="col-2-10">
+			<div></div>
+		</div>
+		<div class="col-2-10">
+			<div></div>
+		</div>
+		<div class="col-2-10">
+			<div></div>
+		</div>
+		<div class="col-2-10">
+			<div></div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-1-11">
+			<div></div>
+		</div>
+		<div class="col-1-11">
+			<div></div>
+		</div>
+		<div class="col-1-11">
+			<div></div>
+		</div>
+		<div class="col-1-11">
+			<div></div>
+		</div>
+		<div class="col-1-11">
+			<div></div>
+		</div>
+		<div class="col-1-11">
+			<div></div>
+		</div>
+		<div class="col-1-11">
+			<div></div>
+		</div>
+		<div class="col-1-11">
+			<div></div>
+		</div>
+		<div class="col-1-11">
+			<div></div>
+		</div>
+		<div class="col-1-11">
+			<div></div>
+		</div>
+		<div class="col-1-11">
+			<div></div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-7-11">
+			<div></div>
+		</div>
+		<div class="col-4-11">
+			<div></div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-1-12">
+			<div></div>
+		</div>
+		<div class="col-1-12">
+			<div></div>
+		</div>
+		<div class="col-1-12">
+			<div></div>
+		</div>
+		<div class="col-1-12">
+			<div></div>
+		</div>
+		<div class="col-1-12">
+			<div></div>
+		</div>
+		<div class="col-1-12">
+			<div></div>
+		</div>
+		<div class="col-1-12">
+			<div></div>
+		</div>
+		<div class="col-1-12">
+			<div></div>
+		</div>
+		<div class="col-1-12">
+			<div></div>
+		</div>
+		<div class="col-1-12">
+			<div></div>
+		</div>
+		<div class="col-1-12">
+			<div></div>
+		</div>
+		<div class="col-1-12">
+			<div></div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-3-12">
+			<div></div>
+		</div>
+		<div class="col-3-12">
+			<div></div>
+		</div>
+		<div class="col-3-12">
+			<div></div>
+		</div>
+		<div class="col-3-12">
+			<div></div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-1-13">
+			<div></div>
+		</div>
+		<div class="col-1-13">
+			<div></div>
+		</div>
+		<div class="col-1-13">
+			<div></div>
+		</div>
+		<div class="col-1-13">
+			<div></div>
+		</div>
+		<div class="col-1-13">
+			<div></div>
+		</div>
+		<div class="col-1-13">
+			<div></div>
+		</div>
+		<div class="col-1-13">
+			<div></div>
+		</div>
+		<div class="col-1-13">
+			<div></div>
+		</div>
+		<div class="col-1-13">
+			<div></div>
+		</div>
+		<div class="col-1-13">
+			<div></div>
+		</div>
+		<div class="col-1-13">
+			<div></div>
+		</div>
+		<div class="col-1-13">
+			<div></div>
+		</div>
+		<div class="col-1-13">
+			<div></div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-8-13">
+			<div></div>
+		</div>
+		<div class="col-5-13">
+			<div></div>
+		</div>
+	</div>
+	
 	
 </div>
 	
