--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 	<div class="row">
 		<div class="col-1-2">
 			<div>
-				<firgure>
+				<figure>
 					<img src="img/subaru_gallery.jpg" alt="">
-				</firgure> 
+				</figure> 
 			</div>
 		</div>
 		<div class="col-1-2">
